Charts/templates/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 5068
      targetPort: 5068
  type: LoadBalancer
