Charts/templates/billing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: billing-service
spec:
  selector:
    app: billing
  ports:
    - protocol: TCP
      port: 5076
      targetPort: 5076
  type: LoadBalancer
