Charts/templates/delivery-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: delivery-service
spec:
  selector:
    app: delivery
  ports:
    - protocol: TCP
      port: 5073
      targetPort: 5073
  type: LoadBalancer
