Charts/templates/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app: notification
  ports:
    - protocol: TCP
      port: 5075
      targetPort: 5075
  type: LoadBalancer
