Charts/templates/orders-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
spec:
  selector:
    app: orders
  ports:
    - protocol: TCP
      port: 5074
      targetPort: 5074
  type: LoadBalancer
