Charts/templates/storage-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storage-service
spec:
  selector:
    app: storage
  ports:
    - protocol: TCP
      port: 5072
      targetPort: 5072
  type: LoadBalancer
